# lmn

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXAMPLES.md  LICENSE  README.md  SECURITY.md  TEMPLATES.md  TODO.md  docker-compose.yml  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.config/: nextest.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  docs.yml  publish.yml  release.yml
.templates.example/json/: error-inducing-placeholder.json  placeholder.json  simple.json
comparison/k6/: 1_script.js  2_script.js  3_script.js  RUN.md
comparison/lmn/: 1_config.yaml  2_config.yaml  3_config.yaml  3_request.json  RUN.md
docs/: CNAME  index.md
docs/getting-started/: core-concepts.md  index.md  installation.md  quickstart.md
docs/guides/: config-files.md  first-load-test.md  headers-auth.md  index.md  load-curves.md  request-bodies.md  scenarios-internals.md  scenarios.md  thresholds-ci.md
docs/recipes/: auth-headers.md  ci-artifact.md  ci-github.md  ci-gitlab.md  config-file.md  index.md  load-curve.md  post-inline.md  post-template.md  quick-get.md  response-template.md  scenarios.md
docs/reference/: cli.md  config.md  exit-codes.md  json-output.md  template-placeholders.md
examples/: README.md
examples/configs/: README.md  ci-pipeline.yaml  full.yaml  minimal.yaml  scenarios.yaml
examples/load-curves/: README.md  morning-ramp.json  soak.json  spike.json  stress.json
examples/request-bodies/: README.md  error-simulation.json  static-body.json  string-and-float.json  with-env-token.json
examples/response-extractions/: README.md  nested-string.json
getting-started/: index.html
getting-started/core-concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/config-files/: index.html
guides/first-load-test/: index.html
guides/headers-auth/: index.html
guides/load-curves/: index.html
guides/request-bodies/: index.html
guides/scenarios/: index.html
guides/scenarios-internals/: index.html
lmn-cli/: CLI.md  Cargo.toml  EXAMPLES.md
lmn-cli/src/: main.rs
lmn-cli/src/cli/: adapter.rs  command.rs  json_output.rs  output.rs
lmn-cli/tests/: functional.sh
lmn-core/: Cargo.toml  README.md  TEMPLATES.md
lmn-core/src/: SAMPLING.md  lib.rs  sampling.rs
lmn-core/src/capture/: mod.rs
lmn-core/src/command/: configure_template.rs  method.rs  mod.rs  run.rs
lmn-core/src/config/: error.rs  lumen_config.rs  mod.rs  resolver.rs  secret.rs
lmn-core/src/execution/: error.rs  mod.rs  rate_limit.rs
lmn-core/src/execution/curve/: mod.rs
lmn-core/src/execution/fixed/: mod.rs
lmn-core/src/histogram/: categorical.rs  latency.rs  mod.rs  numeric.rs  status_code.rs
lmn-core/src/http/: mod.rs  request.rs
lmn-core/src/load_curve/: executor.rs  mod.rs
lmn-core/src/monitoring/: MONITORING.md  spans.rs
lmn-core/src/output/: compute.rs  mod.rs  report.rs
lmn-core/src/publish/: config.rs  envelope.rs  error.rs  http_sink.rs  mod.rs  sink.rs
lmn-core/src/request_template/: definition.rs  error.rs  generator.rs  mod.rs  renderer.rs
lmn-core/src/request_template/generators/: float.rs  string.rs
lmn-core/src/request_template/validators/: float.rs  mod.rs  object.rs  string.rs
lmn-core/src/response_template/: error.rs  extractor.rs  field.rs  mod.rs  stats.rs
lmn-core/src/stats/: distribution.rs  mod.rs
lmn-core/src/threshold/: error.rs  mod.rs  parse.rs  types.rs
lmn-core/src/vu/: mod.rs  scenario.rs
lmn-core/tests/: compute_snapshot.rs  publish_snapshot.rs  report_snapshot.rs  request_template.rs
lmn-core/tests/request_template/: definition.rs  generator.rs  placeholder.rs  renderer.rs
lmn-core/tests/response_template/: extractor.rs  field.rs  stats.rs
lmn-core/tests/snapshots/: compute_snapshot__run_report_from_curve_mode_two_stages.snap  compute_snapshot__run_report_from_fixed_mode_deterministic_samples.snap  publish_snapshot__publish_envelope_v1_minimal_report.snap  publish_snapshot__publish_envelope_v1_schema_locked.snap  report_snapshot__run_report_v2_schema_locked_all_fields_present.snap  report_snapshot__run_report_v2_schema_locked_all_optionals_absent.snap
loadtest-cli/: CLI.md  Cargo.toml
loadtest-cli/src/: main.rs
loadtest-cli/src/cli/: adapter.rs  command.rs  output.rs
loadtest-core/: Cargo.toml  TEMPLATES.md
lumen-cli/: CLI.md  Cargo.toml  Dockerfile  EXAMPLES.md  docker-compose.yml
lumen-cli/src/: main.rs
lumen-cli/src/cli/: adapter.rs  command.rs  json_output.rs  mod.rs  output.rs
lumen-core/: Cargo.toml  TEMPLATES.md
lumen-core/.templates.example/config/: ci-pipeline.yaml  full.yaml  minimal.yaml
lumen-core/.templates.example/curves/: ramp.json  stepped.json
lumen-core/.templates.example/json/: error-inducing-placeholder.json  placeholder.json
lumen-core/.templates.example/json/responses/: error-code.json
lumen-core/src/: lib.rs
lumen-core/src/command/: configure_template.rs  run.rs
lumen-core/src/config/: error.rs  lumen_config.rs  mod.rs  secret.rs
lumen-core/src/http/: mod.rs  request.rs
lumen-core/src/load_curve/: executor.rs  mod.rs
lumen-core/src/monitoring/: spans.rs
lumen-core/src/output/: mod.rs  report.rs
lumen-core/src/request_template/: definition.rs  generator.rs  mod.rs  renderer.rs
lumen-core/src/request_template/generators/: string.rs
lumen-core/src/response_template/: error.rs
lumen-core/src/stats/: distribution.rs  mod.rs
lumen-core/src/threshold/: mod.rs  parse.rs  types.rs
lumen-core/tests/: response_template.rs
lumen-core/tests/request_template/: definition.rs  generator.rs  placeholder.rs  renderer.rs
lumen-core/tests/response_template/: extractor.rs  field.rs  stats.rs
monitoring/: tempo.yaml
recipes/: index.html
search/: search_index.json
src/: lib.rs  main.rs
src/cli/: adapter.rs  (+3 more)
stylesheets/: extra.css
tests/: command.rs  template.rs
(+79 files in other folders)
