[package]
name = "loadtest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "unstable-doc"] }
clap-cargo = "0.18.3"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
