[package]
name = "loadtest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive", "unstable-doc"] }
clap-cargo = "0.18.3"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
