[workspace]
members = [
    "lmn-core",
    "lmn-cli",
]
resolver = "2"

[profile.release]
strip = true

[workspace.dependencies]
hdrhistogram = "7"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway = "0.9"
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "macros", "sync", "signal"] }
tokio-util = "0.7"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.23"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client", "trace"], default-features = false }
opentelemetry_sdk = "0.31.0"
clap = { version = "4.5.60", features = ["derive", "unstable-doc"] }
clap-cargo = "0.18.3"
tempfile = "3"
