[package]
name = "loadtest-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
loadtest-core = { path = "../loadtest-core" }
clap.workspace = true
clap-cargo.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
