[package]
name = "lumen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
lumen-core = { path = "../lumen-core" }
clap.workspace = true
clap-cargo.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
