[package]
name = "lumen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true


[dev-dependencies]
tempfile.workspace = true
